--- a/src/index.html
+++ b/src/index.html
@@ -7,44 +7,67 @@
     <title>Document</title>
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@200&family=Pacifico&family=Roboto:wght@300;400&display=swap" rel="stylesheet">    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@200&family=Pacifico&family=Roboto:wght@300;400;600&display=swap" rel="stylesheet">    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="main">
     <aside class="sidebar">   
-        <div class="title">
-            <div class="title__logo">Just do it</div>
-            <span class="hamburger"><i class="fas fa-bars"></i></span>   
-        </div>
-        <div class="option">
-            <a href="#" class="option__link">
-                <span class="icon"></span>General 
-            </a>
-            <a href="#" class="option__link">
-                <span class="icon"></span>Details 
-            </a>
-            <a href="#" class="option__link">
-                <span class="icon"></span>Links 
-            </a>
-            <a href="#" class="option__link">
-                <span class="icon"></span>Banners 
-            </a>
-            <a href="#" class="option__link">
-                <span class="icon"></span>Personal data 
-            </a>
-            <a href="#" class="option__link">
-                <span class="icon"></span>Payout 
-            </a>       
-            <a href="#" class="option__link">
-                <span class="icon"></span>Postback 
-            </a>       
-        </div> 
-        <div class="manager">
-            <div class="manager__heading">
-                Your manager
+        <div class="title__logo">Just do it</div>
+        <label for="dropdown" class="hamburger">
+            <i class="fas fa-bars"></i>
+        </label>
+        <input class="input-box" type="checkbox" id="dropdown" style="display:none;">
+        <div class="sidebar-toggle">
+            <div class="option">
+                <a href="./index.html" class="option__link active">
+                    <span class="icon"></span>General 
+                </a>
+                <a href="./details.html" class="option__link">
+                    <span class="icon"></span>Details 
+                </a>
+                <a href="./links.html" class="option__link">
+                    <span class="icon"></span>Links 
+                </a>
+                <a href="./banners.html" class="option__link">
+                    <span class="icon"></span>Banners 
+                </a>
+                <a href="./personal.html" class="option__link">
+                    <span class="icon"></span>Personal data 
+                </a>
+                <a href="./payout.html" class="option__link">
+                    <span class="icon"></span>Payout 
+                </a>       
+                <a href="./postback.html" class="option__link">
+                    <span class="icon"></span>Postback 
+                </a>       
+            </div> 
+            <div class="manager">
+                <div class="manager__heading">
+                    Your manager
+                </div>
+                <div class="manager__prev">
+                    <img src="/images/profilePicture.jpg" alt="" class="manager__prev__img">
+                    <div class="manager__prev__status"></div>
+                    <span class="manager__prev__name"><a href="#" class="link">Mickey M.</a></span>
+                </div>
             </div>
-            <div class="manager__prev">
-                <img src="" alt="" class="manager__prev__img">
-                <span class="manager__prev__name"><a href="#" class="link">Mickey M.</a></span>
+            <div class="sidebar-nav">
+                <div class="sidenav">
+                    <div class="sidenav__option sidenav__option--large">
+                        <div class="icon"></div>
+                        <div>$1,500.00</div>
+                        <div class="icon"></div>
+                    </div>
+                    <div class="sidenav__option">
+                        <div class="icon"></div>
+                    </div>
+                    <div class="sidenav__option sidenav__option--small">
+                        <div class="icon"></div>
+                        <div><a href="#" class="link">Leonardo Dicaprio</a></div>
+                    </div>
+                    <div class="sidenav__option">
+                        <div class="icon"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </aside>
@@ -68,8 +91,111 @@
         </div>
     </header>
     <section class="panel">
+        <div class="panel__header panel__line">
+            <div class="panel__title">General Statistics</div>
+        </div>
+        <div class="panel__date-picker panel__line date-picker">
+            <div class="date-picker__calendar calendar">
+                <input type="date" value="2021-07-22"
+                min="2021-01-01" max="2021-12-31" class="date-picker__date calendar__start">
+                <input type="date" value="2021-07-22"
+                min="2021-01-01" max="2021-12-31"   class="date-picker__date calendar__end">
+            </div>
+            <div class="btn date-picker__btn"><div class="icon"></div></div>
+        </div>
+        <div class="panel__content data">
+            <div class="data__single panel__line">
+                <div class="data__single__text">Visit signups</div>
+                <div class="data__single__figure">124</div>
+            </div>
+            <div class="data__single panel__line">
+                <div class="data__single__text">Net deposit</div>
+                <div class="data__single__figure">564</div>
+            </div>  
+            <div class="data__single panel__line">
+                <div class="data__single__text">FTD</div>
+                <div class="data__single__figure">445</div>
+            </div>
+            <div class="data__single panel__line">
+                <div class="data__single__text">Turnover</div>
+                <div class="data__single__figure">432</div>
+            </div>
+            <div class="data__chart">
+                <img src="./images/chart.PNG" alt="chart">
+            </div>
+        </div>
     </section>
     <section class="panel">
+        <div class="panel__header panel__line">
+            <div class="panel__title">Links</div>
+        </div>
+        <div class="links">
+            <div class="links__link panel__line">
+                <div class="btn links__btn ">
+                    + add new
+                </div>
+            </div>
+            <div class="links__link link panel__line">
+                <div class="link__title">Home Page</div>
+                <a href="http://www.yourpage.com" class="link__href">http://www.yourpage.com</a>
+                <div class="link__icon icon"></div>
+                <div class="link__icon icon"></div>
+            </div>
+            <div class="links__link link panel__line">
+                <div class="link__title">Currently offer</div>
+                <a href="http://www.currently.com" class="link__href">http://www.currently.com</a>
+                <div class="link__icon icon"></div>
+                <div class="link__icon icon"></div>
+            </div>
+            <div class="links__link link panel__line">
+                <div class="link__title">Blurpix</div>
+                <a href="http://blurpix.com" class="link__href">http://blurpix.com</a>
+                <div class="link__icon icon"></div>
+                <div class="link__icon icon"></div>
+            </div>
+            <div class="links__link link panel__line">
+                <div class="link__title">Your Site</div>
+                <a href="http://www.yoursite.com" class="link__href">http://www.yoursite.com</a>
+                <div class="link__icon icon"></div>
+                <div class="link__icon icon"></div>
+            </div>
+            <div class="links__link link panel__line">
+                <div class="link__title">Google</div>
+                <a href="http://www.google.com" class="link__href">http://www.google.com</a>
+                <div class="link__icon icon"></div>
+                <div class="link__icon icon"></div>
+            </div>
+            <div class="links__link link panel__line">
+                <div class="link__title">Facebook</div>
+                <a href="http://www.facebook.com" class="link__href">http://www.facebook.com</a>
+                <div class="link__icon icon"></div>
+                <div class="link__icon icon"></div>
+            </div>
+            <div class="links__link link panel__line">
+                <div class="link__title">Dashboard</div>
+                <a href="http://www.dashboard.com" class="link__href">http://www.dashboard.com</a>
+                <div class="link__icon icon"></div>
+                <div class="link__icon icon"></div>
+            </div>
+            <div class="links__link link panel__line">
+                <div class="link__title">Twitter</div>
+                <a href="http://www.twitter.com" class="link__href">http://www.twitter.com</a>
+                <div class="link__icon icon"></div>
+                <div class="link__icon icon"></div>
+            </div>
+            <div class="links__link">
+                <div class="btn links__btn ">
+                    + add new
+                </div>
+            </div>
+        </div>
     </section>
 </body>
+
+<!-- PYTANIA: 
+    * jak podlaczyc ikonki?
+    * jak zrobic kalendarz, zeby nie bylo ikony kalendarza w pierwszym inpucie?
+-->
 </html>
+
+
